--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://kratorado.github.io
 title: My Octopress Blog
 subtitle: A blogging framework for hackers.
-author: Your Name
+author: kratr
 simple_search: http://google.com/search
 description:
 
